--- a/style.css
+++ b/style.css
@@ -2,4 +2,143 @@
 
 *{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #f4f4f4;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    display: flex;
+}
+.profile-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    max-width: 370px;
+    border-radius: 24px ;
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+    padding: 20px;
+    width:100%;
+    position: relative;
+}
+.profile-card::before{
+    background-color: #4070f4;
+    content: '';
+    position: absolute;
+    height: 36%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0 ;
+    border-radius: 24px 24px 0 0;
+}
+
+.profile-card .text-data{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: #333;
+
+}
+
+.image{
+    position : relative;
+    width: 150px;
+    height: 150px;
+    padding: 3px;
+    background-color: #4070f4;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    
+}
+.profile-card .media-buttons{
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+
+}
+
+.profile-card .buttons{
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+
+}
+
+.buttons .button{
+    background-color: #4070f4;
+    padding: 8px 24px;
+    margin: 0 10px;
+    border: none;
+    border-radius: 24px;
+    color: white;
+    font-size: 14px;
+    font-weight: 400;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.buttons .button:hover{
+    background-color: #0e4bf1;
+    
+}
+
+.profile-card .link{
+    width: 34px;
+    height: 34px;
+    background-color: #4070f4;
+    font-size: 18px;
+
+    margin: 0 8px;
+    display: flex;
+    text-decoration: none;
+    border-radius: 50%;
+    color: #fff;
+    align-items: center;
+    justify-content: center;
+}
+.text-data .name{
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.text-data .job{
+    font-size: 15px;
+    font-weight: 400;
+}
+.image .profile-image{
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 3px solid white;
+
+}
+
+.profile-card .analytics{
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+
+.analytics .data{
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    border-right: 2px solid #e7e7e7;
+    color: #333;
+}
+
+.data:last-child{
+    border-right: none;
+}
+
+.data i{
+    font-size: 18px;
+    margin-right: 6px;
+
 }
